package ru.yandex.practicum.filmorate.model.Genre;

public enum Genres {
    COMEDY,
    DRAMA,
    ANIMATION,
    THRILLER,
    DOCUMENTARY,
    ACTION;
}
